# steward.app

./: .gitignore  .gitmodules  Dockerfile  Makefile  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  websiteconfig.py
app/: Dockerfile  __init__.py  asset.py  channels.py  extensions.py  forms.py  maintenance.py  offline.py  package.json  pwa.py  resolver.py  user.py  util.py  webpack.config.js
app/src/: app.js  sw.js
app/static/: .gitignore  manifest.json
app/templates/: base.html  offline.html
